public class BSTTree<E extends Comparable<E> & Identifiable> extends BST<E> {
  public BSTTree(){
      super();
  }
}
