public interface Identifiable {
    String getName();
    Integer getID();
}
